--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,23 @@ numpy
 rank-bm25 
 pydantic
 
+PyQt6==6.4.2
+pyqt6-tools==6.4.2.3.3
+sentence-transformers==4.1.0
+rank-bm25==0.2.2
+chromadb==0.4.14
+onnxruntime==1.16.0
+torch==2.7.0
+transformers==4.51.3
+ollama==0.4.8
+pypdf==5.4.0
+python-dotenv==1.1.0
+requests==2.32.3
+scikit-learn==1.6.1
+scipy==1.15.2
+tqdm==4.67.1                
+PyYAML==6.0.2
+numpy==1.26.4
+regex==2024.11.6
+urllib3==2.4.0
+python-dateutil==2.9.0.post0
